<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentListVideo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilSearching"
            android:layout_width="0dp"
            android:layout_height="@dimen/searching_field_size"
            android:layout_marginStart="@dimen/margin_normal"
            app:hintTextColor="?attr/colorOnSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnLens"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSearching"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorOnSecondary"
                android:hint="@string/search_video"
                android:inputType="text"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnLens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:src="@drawable/ic_baseline_search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ilSearching"
                    app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/dark_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clTop">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvVideo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:contentDescription="@string/video"
            app:layout_constraintBottom_toTopOf="@id/flowCategories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/recycler_view_video_item" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            app:constraint_referenced_ids="btnMushroom, btnTermite, btnAnimal, btnMyFavorite"
            app:flow_horizontalGap="@dimen/margin_normal"
            app:flow_verticalGap="@dimen/margin_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnMushroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:padding="@dimen/margin_small"
            android:text="@string/category_mushroom"
            android:textColor="?attr/colorOnPrimary"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnTermite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:padding="@dimen/margin_small"
            android:text="@string/category_termite"
            android:textColor="?attr/colorOnPrimary"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnAnimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:padding="@dimen/margin_small"
            android:text="@string/category_animals"
            android:textColor="?attr/colorOnPrimary"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnMyFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:padding="@dimen/margin_small"
            android:text="@string/category_my_fav"
            android:textColor="?attr/colorOnPrimary"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>