<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/ic_btn_size"
            android:layout_height="@dimen/ic_btn_size"
            android:layout_marginStart="@dimen/margin_normal"
            android:background="?attr/colorPrimary"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/rbVideoRate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rbVideoRate" />

        <RatingBar
            android:id="@+id/rbVideoRate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ic_btn_size"
            android:background="?attr/colorPrimary"
            android:tooltipText="@string/video_rating_tool_tip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute,SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnFavorite"
            android:layout_width="@dimen/ic_btn_size"
            android:layout_height="@dimen/ic_btn_size"
            android:layout_marginEnd="@dimen/margin_normal"
            android:background="@drawable/ic_empty_heart"
            app:layout_constraintBottom_toBottomOf="@+id/rbVideoRate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rbVideoRate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/flBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/dark_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clTop">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/pvDetailsPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/rvVideoComments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvVideoComments"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:contentDescription="@string/video"
            app:layout_constraintBottom_toTopOf="@id/ilAddComment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pvDetailsPlayer"
            tools:listitem="@layout/recycler_view_video_comment_item" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilAddComment"
            android:layout_width="0dp"
            android:layout_height="@dimen/searching_field_size"
            app:hintTextColor="?attr/colorOnSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnAddComment"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddComment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorOnSecondary"
                android:hint="@string/write_comment"
                android:inputType="text"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="italic"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnAddComment"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:background="?attr/colorPrimary"
            android:src="@drawable/ic_add_comment"
            app:layout_constraintBottom_toBottomOf="@+id/ilAddComment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ilAddComment" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>